lesscss/combatants.less
.combatants {
    overflow-y: auto;
    flex-shrink: 1;
    padding: @large-spacer;
    background-color: @primary-white;
    border: 1px solid @accent-white;
}

@keyframes slide-from-left {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(0%);
    }
}

.combatant {
    display: flex;
    padding: @medium-spacer;
    border-left-width: @medium-spacer;
    border-left-style: solid;
    align-items: baseline;

    .fa-clickable:hover {
        color: @hover-green;
    }

    .colors(@primary-black, @primary-white, transparent);

    &:nth-child(2n-1) {
        background-color: @zebra-white;
    }

    &.animate {
        animation: slide-from-left 0.5s;
    }

    &.active .combatant__name {
        font-weight:bold;
    }

    &.active {
        border-color: @active-green;
        // background-color: @active-white;
        background-color: @hover-green;
    }

    &:hover {
        background-color: @hover-white;
    }

    &.selected {
        background-color: @selected-light;
    }
}

.combatant--header {
    .colors(@primary-white, @primary-grey, @primary-black);
    display: flex;
    flex-flow: row;
    padding: @medium-spacer;
    align-items: baseline;
    .combatant__hp:hover {
        background-color: inherit;
    }
}

.combatant__initiative {
    width: 40px;
    text-align: left;
    &.fa-link:before{
        font-size: 60%;
        vertical-align: top;
    }
    &.fa {

    }
}

.combatant__name {
    padding: @small-spacer;
    width: 50%;
}

.combatant__hp {

    align-self: stretch;
    padding-top: 4px;

    width: 70px;
    text-align: center;
    &:hover {
        background-color: @hover-red;
    }
}

.combatant__ac {
    padding: @small-spacer;
    width: 30px;
    text-align: center;
}

.combatant__tags {
    padding: @small-spacer;
    flex-grow:1;
    flex-shrink: 1;
}

.combatant__buttons {
    padding: @small-spacer;
}

